--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   loading_animation_widget: ^1.3.0
   awesome_snackbar_content: ^0.1.4
   cached_network_image: ^3.4.1
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
@@ -33,7 +34,6 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   mockito: ^5.4.4
   build_runner: ^2.4.13
-  http_mock_adapter: ^0.6.1
 
 
 flutter:
